--- a/portfolio-assignment/pauwlsky-portfolio/css/style.css
+++ b/portfolio-assignment/pauwlsky-portfolio/css/style.css
@@ -315,6 +315,15 @@ footer h4{
   p.url-text{
     display: none;
   }
+  .modal {
+    padding: 40% 0;
+  }
+  .modal-content {
+    width: 80%;
+  }
+  .modal-content h1{
+    font-size: 2em;
+  }
 }
 
 @media screen and (max-width: 745px){
