added reduce, filter, and map functions

--- a/portfolio-assignment/pauwlsky-portfolio/css/style.css
+++ b/portfolio-assignment/pauwlsky-portfolio/css/style.css
@@ -163,6 +163,16 @@ select{
   margin: 0 20px 50px 20px;
 }
 
+.skills-images{
+  display: flex;
+  justify-content: flex-end;
+}
+
+.skills-images img{
+  height: 10.0rem;
+  margin: 3em 1em;
+}
+
 .modal{
   display: none;
   position: fixed;
@@ -351,6 +361,16 @@ footer h4{
     width: 100%;
     text-align: center;
   }
+
+  .skills-images{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+    .skills-images img{
+      max-height: 5rem;
+    }
 }
 
 @media screen and (max-width: 890px){
