--- a/portfolio-assignment/pauwlsky-portfolio/css/style.css
+++ b/portfolio-assignment/pauwlsky-portfolio/css/style.css
@@ -163,10 +163,6 @@ select{
   margin: 0 20px 50px 20px;
 }
 
-.skills-images{
-  display: flex;
-  justify-content: flex-end;
-}
 
 .skills-images img{
   height: 10.0rem;
@@ -200,6 +196,19 @@ select{
 
 footer h4{
   font-size: 2.2rem;
+}
+
+/*STATES*/
+.height-shrink{
+  height: 10%;
+  opacity: 0;
+  -webkit-transition: height 2s, opacity 2s;
+}
+
+.height-grow{
+  height: 100%;
+  opacity: 1;
+  -webkit-transition: height 2s, opacity 2s;
 }
 
 /*THEME*/
@@ -294,7 +303,7 @@ footer h4{
 }
 
 .sub-header{
-  font-size: 1.7rem;
+  font-size: 2rem;
   font-weight:lighter;
   letter-spacing: .2rem;
   margin: 0 5%;
@@ -362,14 +371,11 @@ footer h4{
     text-align: center;
   }
 
-  .skills-images{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
+
 
     .skills-images img{
       max-height: 5rem;
+      margin: .5rem;
     }
 }
 
