--- a/portfolio-assignment/pauwlsky-portfolio/views/index.html
+++ b/portfolio-assignment/pauwlsky-portfolio/views/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <title>Portfolio</title>
   <link href='https://fonts.googleapis.com/css?family=Lora:400italic,400,700' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Istok+Web' rel='stylesheet' type='text/css'>  <link rel="stylesheet" href="css/normalize.css" />
-  <link rel="stylesheet" href="css/icons.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link href='https://fonts.googleapis.com/css?family=Istok+Web' rel='stylesheet' type='text/css'>  <link rel="stylesheet" href="/assets/css/normalize.css/normalize.css" />
+  <link rel="stylesheet" href="/assets/css/icons.css" />
+  <link rel="stylesheet" href="/assets/css/style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
@@ -21,6 +21,7 @@
       <ul>
         <li><a id="project-li" class="entypo-tools" href="#"> Projects</a></li>
         <li><a id="about-li" class="entypo-user" href="#"> About Me</a></li>
+        <li><a id="following-li" class="fontawesome-github-alt" href="/following"> Following on GitHub </a></li>
       </ul>
         <select id="skills-select">
           <option>See Project By Skills Used</option>
@@ -48,6 +49,12 @@
           Born and raised in the PNW, I never thought I would end up in web design and programming, although now it seems very fitting that I spend so much of my time solving coding. <br /><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
     </div>
+    <div id="githubfollowing" class="container">
+      <div class="header-container container-right">
+        <h1 class="header">GitHub Friends</h1>
+        <img class="logo" src="images/octo-cat.png" />
+      </div>
+    </div>
   </div>
   <footer>
     <h4> &copy Keenan Wells</h4>
@@ -59,12 +66,15 @@
   </footer>
   <script src="https://code.jquery.com/jquery-1.12.3.min.js"   integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ="   crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.js"></script>
-  <script src="js/template.js"></script>
-  <script src="js/projectItems.json"></script>
-  <script src="js/project.js"></script>
-  <script src="js/projectViews.js"></script>
+  <script src="/scripts/js/template.js"></script>
+  <script src="/scripts/js/projectItems.json"></script>
+  <script src="/scripts/js/project.js"></script>
+  <script src="/scripts/js/projectViews.js"></script>
+  <script src="/scripts/js/GitHub.js"></script>
+  <script src="/scripts/js/gitHubController.js"></script>
   <script>
-    Project.fetchAll(projectView.controllerInit);
+  Project.initAndFetchAll(projectView.controllerInit);
+  GitHub.initAndFetchAll(gitHubController.controllerInit);
   </script>
 </body>
 </html>
