githubfollowing template added and applied to append github followers to page.

--- a/portfolio-assignment/pauwlsky-portfolio/templates-hbs/githubfollowing.hbs
+++ b/portfolio-assignment/pauwlsky-portfolio/templates-hbs/githubfollowing.hbs
@@ -1,21 +1,12 @@
-<article data-category="{{title}}" class="project">
+<article data-category="{{login}}" class="githubfollower">
   <div class="title-date text-left">
-    <h2 class="title">{{title}}</h2>
-    <p class="date">{{date}}</p>
-    <p class="days-ago">{{daysAgo}}</p>
+    <h2 class="title">{{login}}</h2>
   </div>
   <div class="body-text">
-    <a class="modal-show" href=""><img class="image image-left" src="{{img}}"/></a>
-    <div class="text text-right">{{{text}}}</div>
-    <a class="show-more" href="#">Read On --></a>
+    <a class="modal-show" href=""><img class="image image-left" src="{{avatar}}"/></a>
   </div>
-  <div class="skills-github text-right">
-    <a class="fontawesome-github-alt font-icon" href="{{url}}"><p class='url-text'>
-      {{url}}</p></a>
-    <h3>Skills Used</h3>
-    <p class="skills">{{#join}}{{skills}}{{/join}}</p>
-  </div>
-  <div class="skills-images window">
+  <div class="skills-github">
+    <a class="fontawesome-github-alt font-icon" href="{{html}}"><p class='url-text'>{{html}}</p></a>
   </div>
   <hr/>
 </article>
