--- a/portfolio-assignment/pauwlsky-portfolio/public/css/style.css
+++ b/portfolio-assignment/pauwlsky-portfolio/public/css/style.css
@@ -64,6 +64,7 @@ article{
   padding: 1%;
 }
 
+
 .image-left {
   float: left;
 }
@@ -144,6 +145,8 @@ select{
 
 .skills-github a{
   letter-spacing: .1rem;
+  display: inline-block;
+  margin: .2em;
 }
 
 .skills-github h3{
@@ -153,6 +156,13 @@ select{
 
 .skills-github .skills{
   margin: 0 0 1rem 0;
+}
+
+
+.githubfollower {
+  width: 350px;
+  display: inline-block;
+  margin: 1rem;
 }
 
 .image{
