--- a/portfolio-assignment/pauwlsky-portfolio/views/index.html
+++ b/portfolio-assignment/pauwlsky-portfolio/views/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Portfolio</title>
+  <title>Keenan Wells | Portfolio</title>
   <link href='https://fonts.googleapis.com/css?family=Lora:400italic,400,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Istok+Web' rel='stylesheet' type='text/css'>  <link rel="stylesheet" href="/assets/css/normalize.css/normalize.css" />
   <link rel="stylesheet" href="/assets/css/icons.css" />
@@ -10,52 +10,67 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
-  <!-- Seperated Out Projects -->
+
   <div class="container">
     <div class="header-container">
       <img class="logo" src="images/logo.jpg" />
       <h1 class="header">Pauwlsky Portfolio</h1>
       <h4 class="sub-header">Keenan P. Wells</h4>
     </div>
+
     <nav id="nav" class="nav-container">
       <ul>
-        <li><a id="project-li" class="entypo-tools" href="#"> Projects</a></li>
-        <li><a id="about-li" class="entypo-user" href="#"> About Me</a></li>
-        <li><a id="following-li" class="fontawesome-github-alt" href="/following"> Following on GitHub </a></li>
+        <li><a id="project-li" class="entypo-tools" href="#">  Projects</a></li>
+        <li><a id="about-li" class="entypo-user" href="#">  About Me</a></li>
+        <li><a id="following-li" class="fontawesome-github-alt" href="/following">  Following on GitHub </a></li>
       </ul>
-        <select id="skills-select">
-          <option>See Project By Skills Used</option>
-          <option val="all">See All Categories</option>
-          </option>
-        </select>
     </nav>
+
     <div id="project-container" class="container">
-      <h1 class="header">My Current Front-End Work</h1>
+      <div class="header-container">
+        <h1 class="header">Front End Work</h1>
+        <nav class="secondary-nav nav-container">
+          <select id="skills-select">
+            <option>See Project By Skills Used</option>
+            <option val="all">See All Categories</option>
+            </option>
+          </select>
+          <ul>
+            <li><a id="project-li" class="entypo-doc-text-inv" href="#">  This Portfolio</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
+
     <div class="modal">
       <div class="modal-content">
       </div>
     </div>
+
     <div id="about" class="container">
-      <div class="header-container container-right">
-        <h4 class="sub-header">...Just another dev wannabe...</h4>
-        <h1 class="header">About Me</h1>
-        <img class="logo" src="images/me.jpg" />
+      <div class="header-container">
+        <div class="container-flex flex-right">
+          <h4 class="sub-header">Who am I?...</h4>
+          <h1 class="header">About Me</h1>
+        </div>
+        <nav class="secondary-nav nav-container">
+          <ul>
+            <li><a id="contact" class="entypo-direction" href="#">  Contact</a></li>
+          </ul>
+        </nav>
       </div>
       <!--TODO Finish self about section and create about templates for mentors with hadlebars and json -->
       <!-- TODO Create mentors.json with properties liting information about all mentors -->
-      <div>
-        <p>
-          Born and raised in the PNW, I never thought I would end up in web design and programming, although now it seems very fitting that I spend so much of my time solving coding. <br /><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
     </div>
-    <div id="githubfollowing" class="container text-center">
-      <div class="header-container container-right">
+
+    <div id="github" class="container text-center">
+      <div class="header-container flex-right">
         <h1 class="header">GitHub Friends</h1>
         <img class="logo" src="images/octo-cat.png" />
       </div>
     </div>
   </div>
+
   <footer>
     <h4> &copy Keenan Wells</h4>
     <a href="https://www.instagram.com/pauwlsky/"><h4 class="entypo-instagrem"></h4></a>
